temp2/Homework2/vpc/main.tf
// getting the data recource of available AZ's
data "aws_availability_zones" "available" {
}

// creating the vpc
resource "aws_vpc" "vpc" {
  cidr_block = "10.0.0.0/16"

  tags = {
    Name = "vpc"
  }
}


// creating igw
resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.vpc.id

  tags = {
    Name = "igw"
  }
}

// creating two public subnets on two AZ's
resource "aws_subnet" "public" {
  count = 2

  availability_zone       = data.aws_availability_zones.available.names[count.index]
  cidr_block              = var.public_subnets[count.index]
  map_public_ip_on_launch = true
  vpc_id                  = aws_vpc.vpc.id

  tags = {
    "Name" = "Public_subnet_${count.index+1}_${data.aws_availability_zones.available.names[count.index]})"
  }
}

// creating twp private subnets on two AZ's
resource "aws_subnet" "private" {
  count = 2

  availability_zone       = data.aws_availability_zones.available.names[count.index]
  cidr_block              = var.private_subnets[count.index]
  map_public_ip_on_launch = false
  vpc_id                  = aws_vpc.vpc.id

  tags = {
    "Name" = "Private_subnet_${count.index+1}_${data.aws_availability_zones.available.names[count.index]})"
  }
}

//making 2 elastic IP addresses in case of NAT failure
resource "aws_eip" "nat" {
  count = 2
  vpc = true

  tags = {
    Name = "nat"
  }
}

//making 2 NAT adderses in case of failure- deploying on public subnet.
resource "aws_nat_gateway" "nat" {
  count = 2
  allocation_id = aws_eip.nat[count.index].id
  subnet_id     = aws_subnet.public[count.index].id

  tags = {
    Name = "nat"
  }

  depends_on = [aws_internet_gateway.igw]
}

// making two private route tables for two NAT addresses
resource "aws_route_table" "private" {
  depends_on = [aws_vpc.vpc]
  count = 2
  vpc_id = aws_vpc.vpc.id

    route {
    cidr_block     = "0.0.0.0/0"
    nat_gateway_id = aws_nat_gateway.nat[count.index].id
  }

  tags = {
    Name = "private"
  }
}

// one public route table
resource "aws_route_table" "public" {
  depends_on = [aws_vpc.vpc]
  vpc_id = aws_vpc.vpc.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.igw.id
  }
  

  tags = {
    Name = "public"
  }
}

// associating the subnets with the route tables
resource "aws_route_table_association" "private" {
  count = 2

  subnet_id      = aws_subnet.private[count.index].id
  route_table_id = aws_route_table.private[count.index].id
}

resource "aws_route_table_association" "public" {
  count = 2

  subnet_id      = aws_subnet.public[count.index].id
  route_table_id = aws_route_table.public.id
}
